<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class DosisPrn extends Model
{
    //
}
