// ========================================
// SISTEMA INTEGRADO MEDI-TRACK
// Integración de Sistema de Usuarios + Medicamentos
// ========================================

// ==========================================
// MÓDULO DE USUARIOS Y ROLES (Existente)
// ==========================================

Table roles {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table usuarios {
  id int [pk, increment]
  nombre varchar(100) [not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  telefono varchar(20)
  rol_id int [not null, ref: > roles.id]
  activo boolean [default: true]
  email_verificado boolean [default: false]
  ultimo_acceso timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table personal_medico {
  usuario_id int [pk, ref: - usuarios.id]
  especialidad varchar(100)
  numero_colegiatura varchar(50) [unique]
  institucion varchar(100)
  anos_experiencia int
}

Table cuidadores {
  usuario_id int [pk, ref: - usuarios.id]
  certificaciones text
  experiencia_anos int
  disponibilidad_horaria varchar(100)
  tarifa_hora decimal(8,2)
}

Table apoderados {
  usuario_id int [pk, ref: - usuarios.id]
  relacion_paciente varchar(50)
  es_contacto_emergencia boolean [default: true]
}

Table pacientes {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id, note: 'Opcional - paciente puede no tener cuenta']
  nombre varchar(100) [not null]
  fecha_nacimiento date
  genero_id char(1) [ref: > generos.id]
  numero_documento varchar(20) [unique]
  tipo_documento varchar(10)
  tipo_sangre varchar(10)
  altura decimal(5,2)
  direccion text
  telefono_emergencia varchar(20)
  observaciones_medicas text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table generos {
  id char(1) [pk]
  nombre varchar(20) [unique, not null]
}

// Relaciones entre usuarios
Table paciente_apoderados {
  paciente_id int [ref: > pacientes.id]
  apoderado_usuario_id int [ref: > apoderados.usuario_id]
  es_principal boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, apoderado_usuario_id) [pk]
  }
}

Table paciente_cuidadores {
  paciente_id int [ref: > pacientes.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id]
  fecha_asignacion date [not null]
  fecha_fin date
  activo boolean [default: true]
  
  indexes {
    (paciente_id, cuidador_usuario_id) [pk]
  }
}

Table paciente_medicos {
  paciente_id int [ref: > pacientes.id]
  medico_usuario_id int [ref: > personal_medico.usuario_id]
  es_medico_principal boolean [default: false]
  fecha_asignacion date [not null]
  fecha_fin date
  especialidad_tratamiento varchar(100)
  
  indexes {
    (paciente_id, medico_usuario_id) [pk]
  }
}

// ==========================================
// MÓDULO DE MEDICAMENTOS (Nuevo - del archivo)
// ==========================================

Table principios_activos {
  id int [pk, increment]
  nombre_generico varchar(100) [unique, not null]
  nombre_comercial varchar(100)
  clasificacion_atc varchar(10)
  grupo_farmacologico varchar(100)
  descripcion text
  activo boolean [default: true]
  creado_en timestamp [default: `CURRENT_TIMESTAMP`]
}

Table formas_farmaceuticas {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  tipo varchar(30) [not null]
  descripcion text
}

Table vias_administracion {
  id int [pk, increment]
  nombre varchar(30) [unique, not null]
  abreviatura varchar(10) [unique, not null]
  descripcion text
}

Table unidades_medida {
  id int [pk, increment]
  nombre varchar(20) [unique, not null]
  tipo varchar(20) [not null]
  equivalencia_base decimal(15,6)
  unidad_base_id int [ref: > unidades_medida.id]
}

Table medicamentos {
  id int [pk, increment]
  principio_activo_id int [not null, ref: > principios_activos.id]
  nombre_comercial varchar(100) [not null]
  forma_farmaceutica_id int [not null, ref: > formas_farmaceuticas.id]
  concentracion decimal(10,3) [not null]
  unidad_concentracion_id int [not null, ref: > unidades_medida.id]
  via_administracion_id int [not null, ref: > vias_administracion.id]
  laboratorio varchar(100)
  registro_sanitario varchar(50)
  lote varchar(50)
  fecha_vencimiento date
  precio_unitario decimal(10,2)
  requiere_receta boolean [default: true]
  controlado boolean [default: false]
  activo boolean [default: true]
  observaciones text
  creado_en timestamp [default: `CURRENT_TIMESTAMP`]
}

// ==========================================
// MÓDULO DE TRATAMIENTOS (Integración)
// ==========================================

Table tratamientos {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id, note: 'RELACIÓN CLAVE CON TU SISTEMA']
  medico_usuario_id int [ref: > personal_medico.usuario_id, note: 'MÉDICO QUE PRESCRIBE']
  nombre varchar(100) [not null]
  diagnostico varchar(200)
  objetivo_terapeutico text
  estado enum('Activo', 'Pausado', 'Completado', 'Suspendido', 'Modificado') [default: 'Activo']
  fecha_inicio date [not null]
  fecha_fin_estimada date
  fecha_fin_real date
  medico_prescriptor varchar(100) [note: 'Nombre del médico para referencia']
  institucion varchar(100)
  observaciones text
  creado_en timestamp [default: `CURRENT_TIMESTAMP`]
  modificado_en timestamp [default: `CURRENT_TIMESTAMP`]
}

Table medicamentos_tratamientos {
  id int [pk, increment]
  medicamento_id int [not null, ref: > medicamentos.id]
  tratamiento_id int [not null, ref: > tratamientos.id]
  tipo_esquema enum('Fijo', 'Variable', 'PRN', 'Escalonamiento', 'Reduccion', 'Alterno') [default: 'Fijo']
  dosis_cantidad decimal(10,3) [not null]
  unidad_dosis_id int [not null, ref: > unidades_medida.id]
  frecuencia_horas int
  dosis_diaria_total decimal(10,3)
  duracion_dias int
  fecha_inicio date [not null]
  fecha_fin date
  indicaciones_uso text
  activo boolean [default: true]
  motivo_suspension text
  orden_prescripcion int [default: 1]
}

Table esquemas_posologicos {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  secuencia int [not null]
  dia_inicio int [not null]
  dia_fin int
  dosis_cantidad decimal(10,3) [not null]
  frecuencia_horas int [not null]
  observaciones text
}

Table dosis_prn {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  dosis_maxima_dia decimal(10,3)
  intervalo_minimo_horas int [not null]
  condicion_uso text [not null]
  dosis_maxima_consecutiva int
  periodo_descanso_horas int
}

// ==========================================
// MÓDULO DE SEGURIDAD FARMACOLÓGICA
// ==========================================

Table interacciones_medicamentos {
  id int [pk, increment]
  principio_activo_1_id int [not null, ref: > principios_activos.id]
  principio_activo_2_id int [not null, ref: > principios_activos.id]
  tipo_interaccion varchar(30) [not null]
  mecanismo text
  efecto_clinico text
  recomendacion text
  severidad tinyint [not null]
  fuente varchar(100)
  activo boolean [default: true]
}

// ==========================================
// NUEVAS TABLAS DE INTEGRACIÓN PROPUESTAS
// ==========================================

// Registro de administración de medicamentos por cuidadores
Table administraciones_medicamentos {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id, note: 'Quien administra']
  paciente_id int [not null, ref: > pacientes.id]
  fecha_hora_programada timestamp [not null]
  fecha_hora_administrada timestamp
  dosis_administrada decimal(10,3)
  estado enum('Programada', 'Administrada', 'Omitida', 'Retrasada') [default: 'Programada']
  observaciones text
  efectos_adversos text
  creado_por int [ref: > usuarios.id]
  creado_en timestamp [default: `CURRENT_TIMESTAMP`]
}

// Autorizaciones de apoderados para tratamientos
Table autorizaciones_tratamiento {
  id int [pk, increment]
  tratamiento_id int [not null, ref: > tratamientos.id]
  apoderado_usuario_id int [not null, ref: > apoderados.usuario_id]
  paciente_id int [not null, ref: > pacientes.id]
  tipo_autorizacion enum('Inicial', 'Modificacion', 'Suspension', 'Emergencia')
  estado enum('Pendiente', 'Autorizada', 'Rechazada') [default: 'Pendiente']
  fecha_solicitud timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_respuesta timestamp
  observaciones_apoderado text
  documento_adjunto varchar(255)
}

// Alertas del sistema
Table alertas_medicamentos {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id]
  tratamiento_id int [ref: > tratamientos.id]
  tipo_alerta enum('Interaccion', 'Alergia', 'Dosis_Excedida', 'Vencimiento', 'Falta_Stock')
  nivel_severidad enum('Baja', 'Media', 'Alta', 'Critica')
  mensaje text [not null]
  medicamentos_involucrados json
  fecha_generada timestamp [default: `CURRENT_TIMESTAMP`]
  revisada boolean [default: false]
  revisada_por int [ref: > usuarios.id]
  fecha_revision timestamp
  accion_tomada text
}

// Historial de cambios en tratamientos
Table historial_tratamientos {
  id int [pk, increment]
  tratamiento_id int [not null, ref: > tratamientos.id]
  usuario_id int [not null, ref: > usuarios.id]
  accion enum('Creado', 'Modificado', 'Pausado', 'Reanudado', 'Finalizado', 'Cancelado')
  campo_modificado varchar(50)
  valor_anterior text
  valor_nuevo text
  motivo text
  fecha_cambio timestamp [default: `CURRENT_TIMESTAMP`]
}

// ==========================================
// PERMISOS ESPECÍFICOS PARA MEDICAMENTOS
// ==========================================

Table permisos {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  modulo varchar(50)
}

Table rol_permisos {
  rol_id int [ref: > roles.id]
  permiso_id int [ref: > permisos.id]
  
  indexes {
    (rol_id, permiso_id) [pk]
  }
}

// ==========================================
// AUDITORÍA INTEGRADA
// ==========================================

Table auditoria_usuarios {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id]
  accion varchar(100) [not null]
  tabla_afectada varchar(50)
  registro_id int
  datos_anteriores json
  datos_nuevos json
  ip_address varchar(45)
  user_agent text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ==========================================
// NOTAS SOBRE LA INTEGRACIÓN
// ==========================================

Note: '''
PUNTOS CLAVE DE INTEGRACIÓN:

1. **PACIENTES**: Tu tabla 'pacientes' es el centro de todo
   - Cada tratamiento se asocia a un paciente específico
   - Los apoderados pueden autorizar tratamientos
   - Los cuidadores administran medicamentos

2. **MÉDICOS**: Tu 'personal_medico' prescribe tratamientos
   - Se relaciona con 'tratamientos.medico_usuario_id'
   - Pueden modificar tratamientos según permisos

3. **CUIDADORES**: Nuevo rol en administración
   - Registran administraciones en 'administraciones_medicamentos'
   - Reportan efectos adversos y observaciones

4. **APODERADOS**: Sistema de autorizaciones
   - Aprueban tratamientos para pacientes menores
   - Reciben alertas importantes

5. **SISTEMA DE ALERTAS**: Seguridad farmacológica
   - Detecta interacciones medicamentosas
   - Alerta sobre alergias y contraindicaciones
   - Notifica vencimientos y faltas de stock

6. **MIGRACIÓN**: Tu tabla actual 'medicamentos' (simple) 
   se reemplazaría por el sistema completo de:
   - principios_activos
   - medicamentos (detallado)
   - formas_farmaceuticas
   - vias_administracion
''' 